tests/errors/stack_underflow.s

.variable n

main:
    pop n
    jmp main

